--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=config-server
+spring.application.name=configserver
 server-port=8071
 spring.cloud.config.server.native.search-locations=classpath:/configuration
 spring.profiles.active=native
