--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ spring:
       server:
         git:
           uri: https://github.com/Moligouan/Mediscreen
-          default-label: main
+          default-label: master
           timeout: 5
           clone-on-start: true
           force-pull: true
